# ChatGLM2-6B-TensorRT

./: .gitignore  CMakeLists.txt  README.md  chatglm_6b  cli_demo.py  demo.py  inference_demo.cpp  inference_test.cpp  requirements.txt  stream_demo.py
include/: color.h  kernel.hpp
kernel/: CMakeLists.txt  __init__.py  bind.cpp  ckernel.py  kernel.cpp  logits_processor.py  pykernel.py  pykernel_no_past.py  pykernel_no_past_new.py  pykernel_no_past_old.py  pykernel_with_past.py  setup.py
onnx_export/: change_onnx2.py  export2onnx.py  export2onnx_cpu.py  export2onnx_fp16.py  export2onnx_fp32.py  export2onnx_v2.py  export2onnx_v2_no_cache.py  export_compare_data.py  export_test.py  export_test_v2.py  export_test_v3.py  modeling_chatglm.py  run_onnx.py  run_onnx2.py  run_onnx_cpu.py  run_onnx_cuda.py  run_onnx_trt.py  utils.py
tensorrt_export/: compare.py  log.txt  onnx2trt.py  onnx2trt_no_cache.py  onnx2trt_with_cache.py  onnx_trt_compare.sh  onnx_trt_compare_fp16.py  onnx_trt_compare_fp32.py  onnx_trt_compare_runing.py  read_trt_profile.py  test.py  test_data_inputs.py  test_data_outputs.py  trt_check_no_past.py  trt_check_with_past.py
